5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1633_2919.log
== TEST (2019-04-02 18:14:01) 
-- CODE:
A altura do 1 integrante do grupo
A altura do 2 integrante do grupo
A altura do 3 integrante do grupo
A altura do 4 integrante do grupo
round(float)
-- ERROR:
File "XXXX", line 1
    A altura do 1 integrante do grupo
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:44) 
-- CODE:
round(float(A altura do 1 integrante do grupo))
round(float(A altura do 2 integrante do grupo))
round(float(A altura do 3 integrante do grupo))
round(float(A altura do 4 integrante do grupo))

-- ERROR:
File "XXXX", line 1
    round(float(A altura do 1 integrante do grupo))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:54) 
-- CODE:
(float(A altura do 1 integrante do grupo)
(float(A altura do 2 integrante do grupo)
(float(A altura do 3 integrante do grupo)
(float(A altura do 4 integrante do grupo)
round(float)
-- ERROR:
File "XXXX", line 1
    (float(A altura do 1 integrante do grupo)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:17) 
-- CODE:
(float(A altura do 1 integrante do grupo))
(float(A altura do 2 integrante do grupo))
(float(A altura do 3 integrante do grupo))
(float(A altura do 4 integrante do grupo))
round(float)
-- ERROR:
File "XXXX", line 1
    (float(A altura do 1 integrante do grupo))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:43) 
-- CODE:
(float(1.37))
(float(A altura do 2 integrante do grupo))
(float(A altura do 3 integrante do grupo))
(float(A altura do 4 integrante do grupo))
round(float)
-- ERROR:
File "XXXX", line 2
    (float(A altura do 2 integrante do grupo))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:21) 
-- CODE:
(float(1.37))
(float(1.37))
(float(1.37))
(float(1.37))
round(float)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:35) 
-- CODE:
(float(1.37))
(float(1.37))
(float(1.37))
(float(1.37))
round(float())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:57) 
-- CODE:
(float(1.37))
(float(1.37))
(float(1.37))
(float(1.37))
round(float())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:39) 
-- CODE:
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:01) 
-- CODE:
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:20:10) 
-- CODE:
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
-- EXECUTION TIME:
0.181083
-- TEST CASE 1:
---- input:
1.78
1.56
1.62
1.74
---- correct output:
1.68
---- user output:

-- TEST CASE 2:
---- input:
1.52
1.53
1.51
1.8
---- correct output:
1.59
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
1.72
1.86
---- correct output:
1.83
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:13) 
-- CODE:
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:20:18) 
-- CODE:
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
-- EXECUTION TIME:
0.219065
-- TEST CASE 1:
---- input:
1.78
1.56
1.62
1.74
---- correct output:
1.68
---- user output:

-- TEST CASE 2:
---- input:
1.52
1.53
1.51
1.8
---- correct output:
1.59
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
1.72
1.86
---- correct output:
1.83
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:28) 
-- CODE:
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(???))
-- ERROR:
File "XXXX", line 5
    round(float(???))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:36) 
-- CODE:
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float())
-- ERROR:
File "XXXX", line 5
    round(float(???))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:25:37) 
-- CODE:
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float(1.37))
round(float())
-- ERROR:
File "XXXX", line 5
    round(float(???))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:26:57) 
-- CODE:
round(float(1.6))
round(float(1.))
round(float(1.55))
round(float(1.37))
round(float())
-- EXECUTION TIME:
0.140945
-- TEST CASE 1:
---- input:
1.78
1.56
1.62
1.74
---- correct output:
1.68
---- user output:

-- TEST CASE 2:
---- input:
1.52
1.53
1.51
1.8
---- correct output:
1.59
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
1.72
1.86
---- correct output:
1.83
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:59) 
-- CODE:
round(float(1.6))
round(float(1.))
round(float(1.55))
round(float(1.37))
round(float())
-- ERROR:
File "XXXX", line 5
    round(float(???))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:08) 
-- CODE:
round(float(1.6))
round(float(1.9))
round(float(1.55))
round(float(1.37))
round(float())
-- ERROR:
File "XXXX", line 5
    round(float(???))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:15) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.37))
round(float())
-- ERROR:
File "XXXX", line 5
    round(float(???))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:24) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.33))
round(float())
-- ERROR:
File "XXXX", line 5
    round(float(???))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:28:10) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.33))
round(float())
-- ERROR:
File "XXXX", line 5
    round(float(???))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:28:32) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.33))
round(float)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:29:12) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.33))
round(float())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:29:20) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.33))
round(float())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:29:49) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.33))
round(float(1.6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:29:52) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.33))
round(float(1.6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:01) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.33))
round(float())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:31:01) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.33))
round(float())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:31:56) 
-- CODE:
round(float(1.6))
round(float(1.5))
round(float(1.55))
round(float(1.33))
round(float())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(float)
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
